--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
             <span>5 хвилин і замовлення готове.</span>
             А ще у наших пекарень стильний дизайн
             та висока якість обслуговування!</p>
-            <img src="./images/baker-man.jpg" alt="чоловік пекар дивится на батони із посмішкою">
+            <img src="./images/baker-man.jpg" 
+            alt="чоловік пекар дивится на батони із посмішкою">
         </section>
         <section>
             <h2>Наші найкращі шеф - кухарі</h2>
             <ul>
                 <li>
                     <article>
-                        <h3>Настя</h3>
-                        <p>Привіт, я Настя!</p>
+                        <h3>Надя</h3>
+                        <p>Привіт, я Надя!</p>
                         <p>Вже 10 років, я свтілюю
                             у життя цікаві та смачні ідеї.</p>
                         <p>Я випічу для вас
