--- a/index.html
+++ b/index.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#" target="_blank">
+            <a href="./index.html" target="_blank">
             <img src="./images/logo.svg" alt="Логотип сучасних пекарень">
             </a>
              <ul>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Шеф-кухарі</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a class="link" href="#tradition-section">Наші традиції</a></li>
+                <li><a class="link" href="#chef-section">Шеф-кухарі</a></li>
+                <li><a class="link" href="#formats-section">Формати</a></li>
+                <li><a class="link" href="#contact-section">Контакти</a></li>
              </ul>
         </nav>
-        <button type="button">Замовити дзвінок</button>
+        <button class="button" type="button" >Замовити дзвінок</button>
     </header>
     <main>
         <section>
-            <h1>Сучасна пекарня</h1>
+            <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
         </section>
-        <section>
-            <ul>
-                <li><a href="">Великий попит на ринку</a></li>
-                <li><a href="">Доступні за бюджетом формати</a></li>
-                <li><a href="">Досвідчена управлінська команда</a></li>
+        <section id="tradition-section">
+            <ul class="advantages-list">
+                <li>Великий попит на ринку</a></li>
+                <li>Доступні за бюджетом формати</a></li>
+                <li>Досвідчена управлінська команда</a></li>
             </ul>
-            <h2>Новий формат традицій</h2>
+            <h2 class="section-title">Новий формат традицій</h2>
             <p>
             <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.
             </p>
@@ -41,8 +42,8 @@
             <img src="./images/baker-man.jpg" 
             alt="чоловік пекар дивится на батони із посмішкою">
         </section>
-        <section>
-            <h2>Наші найкращі шеф - кухарі</h2>
+        <section id="chef-section">
+            <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
             <ul>
                 <li>
                     <article>
@@ -65,8 +66,8 @@
                 </li>
             </ul>  
         </section>
-        <section>
-            <h2>Формати</h2>
+        <section id="formats-section">
+            <h2 class="section-title">Формати</h2>
            <ul>
             <li>
                 <article>
@@ -85,8 +86,17 @@
             </li>
            </ul>
         </section>
-        <section>
-            <h2>Приєднуйся до мережі пекарень</h2>
+        <section id="contact-section">
+            <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352783!2d30.488698376437785!3d50.45667757159338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1762281837247!5m2!1sru!2sua"
+                width="603" 
+                height="595" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </section>
     </main>
     <footer>
@@ -109,7 +119,7 @@
                     <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
                 </li>
                 <li>
-                    <a href="mailto: shopbakery@gmail.com">shopbakery@gmail.com</a>
+                    <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
                 </li>
                 <li>
                     <a href="https://maps.app.goo.gl/nZfxUMiM7pUHxFD18" target="_blank">
@@ -128,7 +138,7 @@
                 </li>
             </ul>
             <a href="#" target="_blank">Політика конфіденційності</a>
-            <p>© 2022 Дані захищені</p>
+            <p>&copy; 2022 Дані захищені</p>
         </address>
     </footer>
 </body>
